--- a/copy/css/procss.css
+++ b/copy/css/procss.css
@@ -252,7 +252,7 @@ header i{
 .section-title h2{
     color:#000;
     display: inline-block;
-    font-size: 30px;
+    font-size: 4vh;
     border-bottom: 2px solid;
     text-transform: uppercase;
     padding:   50px 0px 1px;
@@ -328,46 +328,20 @@ header i{
 
 /*-------------Contact Info--------------*/
 .contact{
-    width: 60%;
-    margin: 0 auto;
-    padding: 50px 0;
-    z-index: 99; 
-}
-.contact .section-title{
-    margin-bottom: 50px;
-}
-.contact .info{
-    display:flex;
-    justify-content: center;
-    margin: 50px 0;
-}
-
-.contact-info .textField{
-    width: 100%;
-    height: 50px;
-    border: 1px solid #000;
-    box-sizing: border-box;
-    background-color: transparent;
-    padding: 30px 15px;
-    margin-bottom: 15px;
-    font-family: 'PT Sans Narrow', sans-serif; 
-    color:#000;
-    font-size: 16px;
-}
-.contact-info .messageField{
-    height:200px;
-}
-
-.contact-info .submitButton{
-    background-color: #000;
-    color:#fff;
-    height:50px;
-    font-weight: 200;
-    font-size: 16px;
-    cursor:pointer;
-    text-transform: uppercase;
     
+    padding: 1rem;
+    z-index: 99; 
+    font-size: 4rem;
 }
+.section-title{
+    margin-bottom: 8rem;
+
+}
+
+.cform{
+  margin-left:  10%;
+}
+
 
 .contact-info  h3 {
     margin: 15px 15px; 
