--- a/1/mobile/css.css
+++ b/1/mobile/css.css
@@ -408,7 +408,7 @@ background: #fff;
 }
 .media{
   
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 600;
   margin: 0 -4%;
   display: block;
@@ -439,7 +439,7 @@ background: #fff;
   display: inline-block;
 
   margin: 10px;
-  padding: .7rem;
+  padding: 1rem;
   border: none;
   border-radius: 10rem;
   background: gainsboro;
