--- a/sample/style.css
+++ b/sample/style.css
@@ -1,214 +1,354 @@
-    body, html {
-      background-color: #000;
-      color: #fff;
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-    canvas {
-      position:absolute;
-      top:0;
-      left:0;
-      z-index: 9;
-    }
+        body, html {
+          background-color: #000;
+          color: #fff;
+          width: 100%;
+          height: 100%;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+        }
+        canvas {
+          position:absolute;
+          top:0;
+          left:0;
+          z-index: 9;
+        }
 
-    .scroll-left {
-      overflow: hidden;
-      height: 20vh; 
-      position: relative;
-      color: #fff;
-      width:40%;
-      left: 30%;
-      top: -10vh;
-      font-size: 3.5rem;
-      z-index: 99999;
-    }
-    .scroll-left p {
-      position: relative;
-      white-space:nowrap;
-     
-      text-align: left;
-      /* Apply animation to this element */ 
-      -moz-animation: scroll-left 60s linear infinite;
-      -webkit-animation: scroll-left 60s linear infinite;
-      animation: scroll-left 60s linear infinite;
-    }
-    /* Move it (define the animation) */
-    @-moz-keyframes scroll-left {
-      0%   { -moz-transform: translateX(100%); }
-      100% { -moz-transform: translateX(-100%); }
-    }
-    @-webkit-keyframes scroll-left {
-      0%   { -webkit-transform: translateX(100%); }
-      100% { -webkit-transform: translateX(-100%); }
-    }
-    @keyframes scroll-left {
-      0%   { 
-        -moz-transform: translateX(100%); /* Browser bug fix */
-        -webkit-transform: translateX(100%); /* Browser bug fix */
-        transform: translateX(200px);         
+        .scroll-left {
+          overflow: hidden;
+          height: 20vh; 
+          position: relative;
+          color: #fff;
+          width:40%;
+          left: 30%;
+          top: -8vh;
+          font-size: 3.5rem;
+          z-index: 99999;
+        }
+        .scroll-left p {
+          position: relative;
+          white-space:nowrap;
+
+          text-align: left;
+          /* Apply animation to this element */ 
+          -moz-animation: scroll-left 60s linear infinite;
+          -webkit-animation: scroll-left 60s linear infinite;
+          animation: scroll-left 60s linear infinite;
+        }
+        /* Move it (define the animation) */
+        @-moz-keyframes scroll-left {
+          0%   { -moz-transform: translateX(100%); }
+          100% { -moz-transform: translateX(-100%); }
+        }
+        @-webkit-keyframes scroll-left {
+          0%   { -webkit-transform: translateX(100%); }
+          100% { -webkit-transform: translateX(-100%); }
+        }
+        @keyframes scroll-left {
+          0%   { 
+            -moz-transform: translateX(100%); /* Browser bug fix */
+            -webkit-transform: translateX(100%); /* Browser bug fix */
+            transform: translateX(200px);         
+          }
+          100% { 
+            -moz-transform: translateX(-100%); /* Browser bug fix */
+            -webkit-transform: translateX(-100%); /* Browser bug fix */
+            transform: translateX(-100%); 
+          }
+        }
+
+        #but{
+
+          z-index: 999;
+          position: relative;
+          color: #fff;
+          top: -15vh;
+          height: 80vh;
+          width: 96.5%;  
+          overflow-y: scroll;
+          font-size: 1.5rem;
+        }
+
+
+        /*---------------Scroll-------*/
+        .weswap-current
+        {
+          display:inline-block;
+          height:200px;
+          margin:10px 40px;
+          padding:5px;
+          overflow:hidden;
+          overflow-y:scroll;
+          width:200px;
+        }
+
+        .weswap-current::-webkit-scrollbar {
+          width: 7px;
+        }
+
+        .weswap-current::-webkit-scrollbar-track {
+
+          border-radius: 10px;
+        }
+
+        .weswap-current::-webkit-scrollbar-thumb {
+          border-radius: 10px;
+          background-color:#ffc72e;
+        }
+
+
+
+
+        /*----------language button----------*/
+
+        .hide {
+          display: none;
+        }
+        button.eng{
+          display:none;
+        }
+        button.hin{
+          display:none;
+          
+        }
+
+        
+        .flex-contianer {
+    display: flex;
+    justify-content: space-between;
+
+  }
+  #eee{
+          display: inline-block;
+          z-index: 999;
+          color: #f00;
+          position: relative;
+          margin-top: 3vh;
+        
+          
+        }
+
+
+        /*----------------Language  button design-----------*/
+        button.button {
+          z-index: 999999999;
+          color: #fff;
+          background: transparent;
+          position: relative;
+          text-align:center;
+          font-size: 2rem;
+          cursor: pointer;
+          padding:.2rem .8rem;
+          border: 1px solid rgba(0,0,0,0.5);
+          border-bottom: 3px solid rgba(0,0,0,0.5);
+          border-radius: 2rem;
+          -moz-border-radius: 2rem;
+          -webkit-border-radius: 2rem;
+          box-shadow: 0 2px 8px rgba(0,0,0,0.5), /* Exterior Shadow */
+          inset 0 1px rgba(255,255,255,0.3), /* Top light Line */
+          inset 0 10px rgba(255,255,255,0.2), /* Top Light Shadow */
+          inset 0 10px 20px rgba(255,255,255,0.25), /* Sides Light Shadow */
+          inset 0 -15px 30px rgba(0,0,0,0.3); /* Dark Background */
+          -webkit-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
+          inset 0 1px rgba(255,255,255,0.3),
+          inset 0 10px rgba(255,255,255,0.2),
+          inset 0 10px 20px rgba(255,255,255,0.25),
+          inset 0 -15px 30px rgba(0,0,0,0.3);
+          -moz-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
+          inset 0 1px rgba(255,255,255,0.3),
+          inset 0 10px rgba(255,255,255,0.2),
+          inset 0 10px 20px rgba(255,255,255,0.25),
+          inset 0 -15px 30px rgba(0,0,0,0.3);
+
+        }
+
+        button.button:hover {
+         opacity: 0.7;
+         text-decoration: none;
+         color: yellow;
+         filter: alpha(opacity=70);
+         -moz-opacity:0.7;
+         -khtml-opacity: 0.7;
+         border-bottom: 0px solid rgba(0,0,0,0.5);
+         border-top: 3px solid rgba(0,0,0,0.5);
+       }
+
+       /*---------------------audio button------------*/
+       /*-----------------audio--------------*/
+       audio {
+        display: none;
       }
-      100% { 
-        -moz-transform: translateX(-100%); /* Browser bug fix */
-        -webkit-transform: translateX(-100%); /* Browser bug fix */
-        transform: translateX(-100%); 
+
+      #butto {
+        z-index: 999999999;
+        color: #fff;
+        background: transparent;
+        position: relative;
+        top: 3vh;
+        left: 3vh;
+        font-size: 2rem;
+        padding: 10px 15px;
+        opacity: 0.8;
+        cursor: pointer;
+        border: 1px solid rgba(0,0,0,0.5);
+        border-bottom: 3px solid rgba(0,0,0,0.5);
+        border-radius: 3rem;
+        -moz-border-radius: 3rem;
+        -webkit-border-radius: 3rem;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.5), /* Exterior Shadow */
+        inset 0 1px rgba(255,255,255,0.3), /* Top light Line */
+        inset 0 10px rgba(255,255,255,0.2), /* Top Light Shadow */
+        inset 0 10px 20px rgba(255,255,255,0.25), /* Sides Light Shadow */
+        inset 0 -15px 30px rgba(0,0,0,0.3); /* Dark Background */
+        -webkit-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
+        inset 0 1px rgba(255,255,255,0.3),
+        inset 0 10px rgba(255,255,255,0.2),
+        inset 0 10px 20px rgba(255,255,255,0.25),
+        inset 0 -15px 30px rgba(0,0,0,0.3);
+        -moz-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
+        inset 0 1px rgba(255,255,255,0.3),
+        inset 0 10px rgba(255,255,255,0.2),
+        inset 0 10px 20px rgba(255,255,255,0.25),
+        inset 0 -15px 30px rgba(0,0,0,0.3);
       }
+      #butto:hover{
+       opacity: 0.7;
+       text-decoration: none;
+       color: yellow;
+       filter: alpha(opacity=70);
+       -moz-opacity:0.7;
+       -khtml-opacity: 0.7;
+       border-bottom: 0px solid rgba(0,0,0,0.5);
+       border-top: 3px solid rgba(0,0,0,0.5);
+       
+     }
+     button.fade:hover {
+      z-index: 999999999999;
+      opacity: 0.8;
     }
 
-    #but{
+    .fade {
+      z-index: 999999999999;
+      opacity: 0.6;
 
-      z-index: 999;
-      position: relative;
-      color: #fff;
-      top: -25vh;
+    }
+
+    /*---------------------- 425  media quary for audio button and scrool left-----*/ 
+    @media (max-width:425px) {
+      #butto{
+        font-size: 1.2rem;
+        padding: 8px 12px;
+      }
+
+      .scroll-left {
+       font-size: 1.8rem;
+       width:70%;
+       left:15%;
+       top:0vh;
+       height: 18vh;
+       margin-bottom: 7vh;
+     }
+
+     #but{
+      margin: 2.5% 0% 2.5% 6%;
       height: 70vh;
-      width: 96.5%;  
+      width: 93.5%;  
+      top: -18vh;
       overflow-y: scroll;
-      font-size: 1.5rem;
+      align-items: center;
+      font-size: 1.2rem;
     }
+    a.button{
+
+     width: 85%;
+     display: block;
+     color:#fff;
+     text-align:center;
+     font-size:1rem;
+     cursor: pointer;
+     text-decoration: none;
+     padding:.5rem;
+     border: 1px solid rgba(0,0,0,0.5);
+     border-bottom: 3px solid rgba(0,0,0,0.5);
+     border-radius: 2rem;
+     -moz-border-radius: 2rem;
+     -webkit-border-radius: 2rem;
+   }
 
 
-    /*---------------Scroll-------*/
-    .weswap-current
-    {
-      display:inline-block;
-      height:200px;
-      margin:10px 40px;
-      padding:5px;
-      overflow:hidden;
-      overflow-y:scroll;
-      width:200px;
+   /*----------language button----------*/
+
+   #eee{
+    display: inline;
+    z-index: 999;
+    color: #f00;
+    position: relative;
+      }
+  .ed{
+    font-size: 1.2rem;
+    margin-top: 0rem;
+    margin-bottom:-1rem;
+    padding-bottom: -2rem;
+  }
+  .hd{
+    font-size: 1.2rem;
+    margin-top: 0rem;
+    margin-bottom: 0rem;
+    padding-bottom: -2rem;
+  }
+
+
+  }
+
+  /*---------------------- 375 media quary for audio button and scrool left-----*/ 
+
+
+  @media (max-width:375px) {
+    #butto{
+      font-size: 1.2rem;
+      padding: 5px 10px;
+
     }
-
-    .weswap-current::-webkit-scrollbar {
-      width: 7px;
+    .scroll-left {
+      font-size: 1.8rem;
+      width:70%;
+      left:15%;
+      top:0vh;
+      height: 18vh;
+      margin-bottom: 7vh;
     }
-
-    .weswap-current::-webkit-scrollbar-track {
-
-      border-radius: 10px;
+    #but{
+      margin: 2.5% 0% 2.5% 6%;
+      height: 70vh;
+      width: 93.8%;  
+      top: -18vh;
+      overflow-y: scroll;
+      align-items: center;
+      font-size: 1.2rem;
     }
-
-    .weswap-current::-webkit-scrollbar-thumb {
-      border-radius: 10px;
-      background-color:#ffc72e;
-    }
-
-
-
-
-/*----------language button----------*/
-
-    .hide {
-      display: none;
-    }
-    button.eng{
-      display:none;
-    }
-    button.hin{
-      display:none;
-      
-    }
-
-    #eee{
-      display: inline;
-      z-index: 999;
-      color: #f00;
-      top: 10rem;
-      position: relative;
-      top: -30vh;
-      left: 90%;
-      
-    }
-
-/*----------------Language  button design-----------*/
-    button.button {
-      z-index: 999999999;
-      color: #fff;
-      background: transparent;
-      position: relative;
+    a.button{
+      width: 80%;
+      display: block;
+      color:#fff;
       text-align:center;
-      font-size: 2rem;
+      font-size:1rem;
       cursor: pointer;
-      padding:.2rem .8rem;
+      text-decoration: none;
+      padding:.5rem;
       border: 1px solid rgba(0,0,0,0.5);
       border-bottom: 3px solid rgba(0,0,0,0.5);
       border-radius: 2rem;
       -moz-border-radius: 2rem;
       -webkit-border-radius: 2rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.5), /* Exterior Shadow */
-      inset 0 1px rgba(255,255,255,0.3), /* Top light Line */
-      inset 0 10px rgba(255,255,255,0.2), /* Top Light Shadow */
-      inset 0 10px 20px rgba(255,255,255,0.25), /* Sides Light Shadow */
-      inset 0 -15px 30px rgba(0,0,0,0.3); /* Dark Background */
-      -webkit-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
-      inset 0 1px rgba(255,255,255,0.3),
-      inset 0 10px rgba(255,255,255,0.2),
-      inset 0 10px 20px rgba(255,255,255,0.25),
-      inset 0 -15px 30px rgba(0,0,0,0.3);
-      -moz-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
-      inset 0 1px rgba(255,255,255,0.3),
-      inset 0 10px rgba(255,255,255,0.2),
-      inset 0 10px 20px rgba(255,255,255,0.25),
-      inset 0 -15px 30px rgba(0,0,0,0.3);
-
     }
 
-    button.button:hover {
-     opacity: 0.7;
-     text-decoration: none;
-     color: yellow;
-     filter: alpha(opacity=70);
-     -moz-opacity:0.7;
-     -khtml-opacity: 0.7;
-     border-bottom: 0px solid rgba(0,0,0,0.5);
-     border-top: 3px solid rgba(0,0,0,0.5);
-   }
-
-
-   @media (max-width:425px) {
-
+    /*----------language button----------*/
 
     #eee{
       display: inline;
       z-index: 999;
       color: #f00;
       position: relative;
-      top: -13rem;
-      left: 78%;
-
-    }
-    .ed{
-      font-size: 1.2rem;
-      margin-top: 0rem;
-      margin-bottom:-1rem;
-      padding-bottom: -2rem;
-    }
-    .hd{
-      font-size: 1.2rem;
-      margin-top: 0rem;
-      margin-bottom: 0rem;
-      padding-bottom: -2rem;
-    }
-
-
-
-  }
-
-  @media (max-width:375px) {
-
-
-
-    #eee{
-      display: inline;
-      z-index: 999;
-      color: #f00;
-      position: relative;
-      top: -11.3rem;
-      left: 78%;
-
     }
     .ed{
       font-size: 1rem;
@@ -225,157 +365,5 @@
 
 
   }
-
-
-
-
-
-  /*---------------------audio button------------*/
-  /*-----------------audio--------------*/
-  audio {
-    display: none;
   }
-
-  #butto {
-    z-index: 999999999;
-    color: #fff;
-    background: transparent;
-    position: relative;
-    top: 3vh;
-    left: 3vh;
-    font-size: 2rem;
-    padding: 10px 15px;
-    opacity: 0.8;
-    cursor: pointer;
-    border: 1px solid rgba(0,0,0,0.5);
-    border-bottom: 3px solid rgba(0,0,0,0.5);
-    border-radius: 3rem;
-    -moz-border-radius: 3rem;
-    -webkit-border-radius: 3rem;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.5), /* Exterior Shadow */
-    inset 0 1px rgba(255,255,255,0.3), /* Top light Line */
-    inset 0 10px rgba(255,255,255,0.2), /* Top Light Shadow */
-    inset 0 10px 20px rgba(255,255,255,0.25), /* Sides Light Shadow */
-    inset 0 -15px 30px rgba(0,0,0,0.3); /* Dark Background */
-    -webkit-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
-    inset 0 1px rgba(255,255,255,0.3),
-    inset 0 10px rgba(255,255,255,0.2),
-    inset 0 10px 20px rgba(255,255,255,0.25),
-    inset 0 -15px 30px rgba(0,0,0,0.3);
-    -moz-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
-    inset 0 1px rgba(255,255,255,0.3),
-    inset 0 10px rgba(255,255,255,0.2),
-    inset 0 10px 20px rgba(255,255,255,0.25),
-    inset 0 -15px 30px rgba(0,0,0,0.3);
-  }
-  #butto:hover{
-   opacity: 0.7;
-   text-decoration: none;
-   color: yellow;
-   filter: alpha(opacity=70);
-   -moz-opacity:0.7;
-   -khtml-opacity: 0.7;
-   border-bottom: 0px solid rgba(0,0,0,0.5);
-   border-top: 3px solid rgba(0,0,0,0.5);
-   
- }
- button.fade:hover {
-  z-index: 999999999999;
-  opacity: 0.8;
-}
-
-.fade {
-  z-index: 999999999999;
-  opacity: 0.6;
-
-}
-
-/*---------------------- 425  media quary for audio button and scrool left-----*/ 
-@media (max-width:425px) {
-  #butto{
-    font-size: 1.2rem;
-    padding: 8px 12px;
-  }
-
-  .scroll-left {
-     font-size: 1.8rem;
-    width:70%;
-    left:15%;
-    top:2vh;
-    height: 18vh;
-    margin-bottom: 7vh;
-  }
-
-  #but{
-    margin: 2.5% 0% 2.5% 6%;
-    height: 70vh;
-    width: 93.5%;  
-    top: -18vh;
-    overflow-y: scroll;
-    align-items: center;
-    font-size: 1.2rem;
-  }
-  a.button{
-
-   width: 85%;
-   display: block;
-   color:#fff;
-   text-align:center;
-   font-size:1rem;
-   cursor: pointer;
-   text-decoration: none;
-   padding:.5rem;
-   border: 1px solid rgba(0,0,0,0.5);
-   border-bottom: 3px solid rgba(0,0,0,0.5);
-   border-radius: 2rem;
-   -moz-border-radius: 2rem;
-   -webkit-border-radius: 2rem;
- }
-
-}
-
-/*---------------------- 375 media quary for audio button and scrool left-----*/ 
-
-
-@media (max-width:375px) {
-  #butto{
-    font-size: 1.2rem;
-    padding: 5px 10px;
-
-  }
-  .scroll-left {
-    font-size: 1.8rem;
-    width:70%;
-    left:15%;
-    top:2vh;
-    height: 18vh;
-    margin-bottom: 7vh;
-  }
-  #but{
-    margin: 2.5% 0% 2.5% 6%;
-    height: 70vh;
-    width: 93.8%;  
-    top: -18vh;
-    overflow-y: scroll;
-    align-items: center;
-    font-size: 1.2rem;
-  }
-  a.button{
-    width: 80%;
-    display: block;
-    color:#fff;
-    text-align:center;
-    font-size:1rem;
-    cursor: pointer;
-    text-decoration: none;
-    padding:.5rem;
-    border: 1px solid rgba(0,0,0,0.5);
-    border-bottom: 3px solid rgba(0,0,0,0.5);
-    border-radius: 2rem;
-    -moz-border-radius: 2rem;
-    -webkit-border-radius: 2rem;
-  }
-
-}
-}
 
