--- a/sample/style.css
+++ b/sample/style.css
@@ -123,10 +123,10 @@
           z-index: 999;
           color: #f00;
           position: relative;
-          margin-top: 3.1vh;
-          left: -3vh;
+          margin-top: 2.6vh;
+          left: -2.5vh;
        }
-.content{
+       .content{
   padding: 0px 12px;
 }
 
@@ -139,7 +139,6 @@
           text-align:center;
           font-size: 2rem;
           cursor: pointer;
-          padding:.2  rem .8rem;
           border: 1px solid rgba(0,0,0,0.5);
           border-bottom: 3px solid rgba(0,0,0,0.5);
           border-radius: 2rem;
@@ -185,8 +184,8 @@
         color: #fff;
         background: transparent;
         position: relative;
-        top: 2.8vh;
-        left: 3vh;
+        top: 2.3vh;
+        left: 2.5vh;
         font-size: 2rem;
         padding: 10px 15px;
         opacity: 0.8;
@@ -285,6 +284,11 @@
     color: #f00;
     position: relative;
       }
+
+.content{
+  padding: 0px 4px;
+}
+
   .ed{
     font-size: 1.2rem;
     margin-top: 0rem;
@@ -351,6 +355,11 @@
       color: #f00;
       position: relative;
     }
+
+.content{
+  padding: 0px 4px;
+}
+
     .ed{
       font-size: 1rem;
       margin-top: 0rem;
