--- a/6/css.css
+++ b/6/css.css
@@ -367,7 +367,7 @@
     transition: filter .3s ease;
   }
 
- @media screen and (max-width: 320px) {
+ @media screen and (min-width: 320px) {
         .card-carousel {
 
     --card-width: 70%;
@@ -378,7 +378,7 @@
     }
   }
 
-    @media screen and (max-width: 425px) {
+    @media screen and (min-width: 425px) {
         .card-carousel {
 
     --card-width: 80%;
@@ -584,12 +584,13 @@
     background: #dcdcdc url(2gif.gif);
     background-repeat: no-repeat;
     background-position:79% ;
-    height:350px;
+    height:280px;
       
   }
   .created{
     font: normal 1.1rem sans-serif;
-    padding:280px 0 0 10px;
+    padding:240px 0 0 0;
+    text-align: center;
      
   }
 
