--- a/Thought/Vichaar Ya Vishvaas/style.css
+++ b/Thought/Vichaar Ya Vishvaas/style.css
@@ -1,4 +1,17 @@
-body, html {
+
+#prelaoder{position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(10,10,10,1);z-index:1000}
+
+.spinner{text-align:center;font-size:10px}
+.spinner,.spinner-inner{position:absolute;top:0;bottom:0;right:0;left:0;border:9px solid #fff;border-color:transparent #fff;margin:auto}
+
+.spinner{width:85px;height:85px;-webkit-animation:spin 2.2s linear 0s infinite normal;-moz-animation:spin 2.2s linear 0s infinite normal;animation:spin 2.2s linear 0s infinite normal}
+
+.spinner-inner{width:40px;height:40px;-webkit-animation:spinback 1.2s linear 0s infinite normal;-moz-animation:spinback 1.2s linear 0s infinite normal;animation:spinback 1.2s linear 0s infinite normal}@-webkit-keyframes spin{from{-webkit-transform:rotate(0)}to{-webkit-transform:rotate(360deg)}}@-moz-keyframes spin{from{-moz-transform:rotate(0)}to{-moz-transform:rotate(360deg)}}@keyframes spin{from{transform:rotate(0)}to{transform:rotate(360deg)}}@-webkit-keyframes spinback{from{-webkit-transform:rotate(0)}to{-webkit-transform:rotate(-360deg)}}@-moz-keyframes spinback{from{-moz-transform:rotate(0)}to{-moz-transform:rotate(-360deg)}}@keyframes spinback{from{transform:rotate(0)}to{transform:rotate(-360deg)}}
+
+
+/*--------------preloader end---------*/
+
+  body, html {
     background-color: #000;
     color: #fff;
     width: 100%;
@@ -6,137 +19,343 @@ body, html {
     margin: 0;
     padding: 0;
     overflow: hidden;
-}
-canvas {
+  }
+  canvas {
     position:absolute;
     top:0;
     left:0;
     z-index: 9;
-}
-
-
-.scroll-left {
-  overflow: hidden;
-  height: 25vh; 
-  position: relative;
-  color: #fff;
-  width:40%;
-  left: 30%;
-  top:10vh;
-  font-size: 3.5rem;
-  z-index: 99999;
-}
-.scroll-left p {
-  position: absolute;
-  white-space:nowrap;
-  margin: 0;
-  text-align: left;
-  /* Apply animation to this element */ 
-  -moz-animation: scroll-left 60s linear infinite;
-  -webkit-animation: scroll-left 60s linear infinite;
-  animation: scroll-left 60s linear infinite;
-}
-/* Move it (define the animation) */
-@-moz-keyframes scroll-left {
-  0%   { -moz-transform: translateX(100%); }
-  100% { -moz-transform: translateX(-100%); }
-}
-@-webkit-keyframes scroll-left {
-  0%   { -webkit-transform: translateX(100%); }
-  100% { -webkit-transform: translateX(-100%); }
-}
-@keyframes scroll-left {
-  0%   { 
-  -moz-transform: translateX(100%); /* Browser bug fix */
-  -webkit-transform: translateX(100%); /* Browser bug fix */
-  transform: translateX(200px);         
   }
-  100% { 
-  -moz-transform: translateX(-100%); /* Browser bug fix */
-  -webkit-transform: translateX(-100%); /* Browser bug fix */
-  transform: translateX(-100%); 
- }
-}
 
+  .scroll-left {
+    overflow: hidden;
+    height: 20vh; 
+    position: relative;
+    color: #fff;
+    width:40%;
+    left: 30%;
+    top: -8vh;
+    font-size: 3.5rem;
+    z-index: 99999;
+  }
+  .scroll-left p {
+    position: relative;
+    white-space:nowrap;
 
+    text-align: left;
+    /* Apply animation to this element */ 
+    -moz-animation: scroll-left 50s linear infinite;
+    -webkit-animation: scroll-left 50s linear infinite;
+    animation: scroll-left 50s linear infinite;
+  }
+  /* Move it (define the animation) */
+  @-moz-keyframes scroll-left {
+    0%   { -moz-transform: translateX(100%); }
+    100% { -moz-transform: translateX(-100%); }
+  }
+  @-webkit-keyframes scroll-left {
+    0%   { -webkit-transform: translateX(100%); }
+    100% { -webkit-transform: translateX(-100%); }
+  }
+  @keyframes scroll-left {
+    0%   { 
+      -moz-transform: translateX(100%); /* Browser bug fix */
+      -webkit-transform: translateX(100%); /* Browser bug fix */
+      transform: translateX(200px);         
+    }
+    100% { 
+      -moz-transform: translateX(-100%); /* Browser bug fix */
+      -webkit-transform: translateX(-100%); /* Browser bug fix */
+      transform: translateX(-100%); 
+    }
+  }
 
+  #but{
 
-#but{
-  
     z-index: 999;
     position: relative;
     color: #fff;
-    height: 70vh;
+    top: -15vh;
+    height: 80vh;
     width: 96.5%;  
     overflow-y: scroll;
     font-size: 1.5rem;
-}
+  }
 
 
-@media (max-width:425px) {
+  /*---------------Scroll-------*/
+  .weswap-current
+  {
+    display:inline-block;
+    height:200px;
+    margin:10px 40px;
+    padding:5px;
+    overflow:hidden;
+    overflow-y:scroll;
+    width:200px;
+  }
 
-  .scroll-left {
-        font-size: 2rem;
-        width: 70%;
-        left: 15%
+  .weswap-current::-webkit-scrollbar {
+    width: 7px;
+  }
+
+  .weswap-current::-webkit-scrollbar-track {
+
+    border-radius: 10px;
+  }
+
+  .weswap-current::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color:#ffc72e;
+  }
+
+
+
+
+  /*----------language button----------*/
+
+  .hide {
+    display: none;
+  }
+  button.eng{
+    display:none;
+  }
+  button.hin{
+    display:none;
+
+  }
+
+
+  .flex-contianer {
+    display: flex;
+    justify-content: space-between;
+
+  }
+  #eee{
+    display: inline-block;
+    z-index: 999;
+    color: #f00;
+    position: relative;
+    margin-top: 2.3vh;
+    left: -2.5vh;
+  }
+  .content{
+    padding: 0px 12px;
+  }
+
+  /*----------------Language  button design-----------*/
+  button.button {
+    z-index: 999999999;
+    color: #fff;
+    background: transparent;
+    position: relative;
+    text-align:center;
+    font-size: 2rem;
+    cursor: pointer;
+    border: 1px solid rgba(0,0,0,0.5);
+    border-bottom: 3px solid rgba(0,0,0,0.5);
+    border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.5), /* Exterior Shadow */
+    inset 0 1px rgba(255,255,255,0.3), /* Top light Line */
+    inset 0 10px rgba(255,255,255,0.2), /* Top Light Shadow */
+    inset 0 10px 20px rgba(255,255,255,0.25), /* Sides Light Shadow */
+    inset 0 -15px 30px rgba(0,0,0,0.3); /* Dark Background */
+    -webkit-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
+    inset 0 1px rgba(255,255,255,0.3),
+    inset 0 10px rgba(255,255,255,0.2),
+    inset 0 10px 20px rgba(255,255,255,0.25),
+    inset 0 -15px 30px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
+    inset 0 1px rgba(255,255,255,0.3),
+    inset 0 10px rgba(255,255,255,0.2),
+    inset 0 10px 20px rgba(255,255,255,0.25),
+    inset 0 -15px 30px rgba(0,0,0,0.3);
+
+  }
+
+  button.button:hover {
+    opacity: 0.7;
+    text-decoration: none;
+    color: yellow;
+    filter: alpha(opacity=70);
+    -moz-opacity:0.7;
+    -khtml-opacity: 0.7;
+    border-bottom: 0px solid rgba(0,0,0,0.5);
+    border-top: 3px solid rgba(0,0,0,0.5);
+  }
+
+  /*---------------------audio button------------*/
+  /*-----------------audio--------------*/
+  audio {
+    display: none;
+  }
+
+  #butto {
+    z-index: 999999999;
+    color: #fff;
+    background: transparent;
+    position: relative;
+    top: 2.3vh;
+    left: 2.5vh;
+    font-size: 2rem;
+    padding: 10px 15px;
+    opacity: 0.8;
+    cursor: pointer;
+    border: 1px solid rgba(0,0,0,0.5);
+    border-bottom: 3px solid rgba(0,0,0,0.5);
+    border-radius: 3rem;
+    -moz-border-radius: 3rem;
+    -webkit-border-radius: 3rem;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.5), /* Exterior Shadow */
+    inset 0 1px rgba(255,255,255,0.3), /* Top light Line */
+    inset 0 10px rgba(255,255,255,0.2), /* Top Light Shadow */
+    inset 0 10px 20px rgba(255,255,255,0.25), /* Sides Light Shadow */
+    inset 0 -15px 30px rgba(0,0,0,0.3); /* Dark Background */
+    -webkit-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
+    inset 0 1px rgba(255,255,255,0.3),
+    inset 0 10px rgba(255,255,255,0.2),
+    inset 0 10px 20px rgba(255,255,255,0.25),
+    inset 0 -15px 30px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
+    inset 0 1px rgba(255,255,255,0.3),
+    inset 0 10px rgba(255,255,255,0.2),
+    inset 0 10px 20px rgba(255,255,255,0.25),
+    inset 0 -15px 30px rgba(0,0,0,0.3);
+  }
+  #butto:hover{
+    opacity: 0.7;
+    text-decoration: none;
+    color: yellow;
+    filter: alpha(opacity=70);
+    -moz-opacity:0.7;
+    -khtml-opacity: 0.7;
+    border-bottom: 0px solid rgba(0,0,0,0.5);
+    border-top: 3px solid rgba(0,0,0,0.5);
+
+  }
+  button.fade:hover {
+    z-index: 999999999999;
+    opacity: 0.8;
+  }
+
+  .fade {
+    z-index: 999999999999;
+    opacity: 0.6;
+
+  }
+
+  /*---------------------- 425  media quary for audio button and scrool left-----*/ 
+  @media (max-width:425px) {
+    #butto{
+      font-size: 1rem;
+      padding: 4px 8px;
     }
-   #but{
-        width: 97.5%;
-        font-size: 1rem;
-        margin: 5% 2.5%;
-        height: 70vh;
 
+    .scroll-left {
+      font-size: 1.8rem;
+      width:70%;
+      left:15%;
+      top:2vh;
+      height: 18vh;
+      margin-bottom: 7vh;
+    }
 
+    #but{
+      margin: 2.5% 0% 2.5% 6%;
+      height: 72vh;
+      width: 93.5%;  
+      top: -15vh;
+      overflow-y: scroll;
+      align-items: center;
+      font-size: 1.2rem;
+    }
+
+    /*----------language button----------*/
+
+    #eee{
+      display: inline;
+      z-index: 999;
+      color: #f00;
+      position: relative;
+    }
+
+    .content{
+      padding: 0px 4px;
+    }
+
+    .ed{
+      font-size: 1.2rem;
+      margin-top: 0rem;
+      margin-bottom:-1rem;
+      padding-bottom: -2rem;
+    }
+    .hd{
+      font-size: 1.2rem;
+      margin-top: 0rem;
+      margin-bottom: 0rem;
+      padding-bottom: -2rem;
     }
 
 
-    
-}
+  }
 
-@media (max-width:375px) {
+/*---------------------- 375 media quary for audio button and scrool left-----*/ 
 
-  .scroll-left {
-font-size: 2rem;
-}
-   #but{
-        width: 98%;
-        font-size: 1rem;
-        margin: 5% 2.5%;
-        height: 70vh;
 
+  @media (max-width:375px) {
+    #butto{
+      font-size: 1rem;
+      padding: 4px 8px;
+
+    }
+    .scroll-left {
+      font-size: 1.8rem;
+      width:70%;
+      left:15%;
+      top:2vh;
+      height: 18vh;
+      margin-bottom: 7vh;
+    }
+    #but{
+      margin: 2.5% 0% 2.5% 6%;
+      height: 72vh;
+      width: 93.8%;  
+      top: -15vh;
+      overflow-y: scroll;
+      align-items: center;
+      font-size: 1.2rem;
     }
 
 
-    
-}
+    /*----------language button----------*/
+
+    #eee{
+      display: inline;
+      z-index: 999;
+      color: #f00;
+      position: relative;
+    }
+
+    .content{
+      padding: 0px 4px;
+    }
+
+    .ed{
+      font-size: 1rem;
+      margin-top: 0rem;
+      margin-bottom:-1rem;
+      padding-bottom: -2rem;
+    }
+    .hd{
+      font-size: 1rem;
+      margin-top: 0rem;
+      margin-bottom: 0rem;
+      padding-bottom: -2rem;
+    }
 
 
-
-
-
-/*---------------Scroll-------*/
-.weswap-current
-{
-  display:inline-block;
-  height:200px;
-  margin:10px 40px;
-  padding:5px;
-  overflow:hidden;
-  overflow-y:scroll;
-  width:200px;
-}
-
-.weswap-current::-webkit-scrollbar {
-  width: 7px;
-}
- 
-.weswap-current::-webkit-scrollbar-track {
-  
-  border-radius: 10px;
-}
- 
-.weswap-current::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color:#ffc72e;
+  }
 }
 
