--- a/3/mobile/css.css
+++ b/3/mobile/css.css
@@ -13,6 +13,7 @@
   background-position: 50% 50%;
   width:100%;
   height: 600px;
+  background-color:  
 }
 
 .image:before{
@@ -166,6 +167,7 @@ body{
          background-size:cover;
          height: 100vh;
          padding: 20px;
+        
          }
 
   #backtype >div>h1{
@@ -568,7 +570,7 @@ body{
 
 
   #s1{
-     background:linear-gradient(to top, #b3ffab 0%, #12fff7 100%);
+     background:linear-gradient(to top, #ff0844 0%, #ffb199 100%);
      color: #000;
   }
   #s2{
@@ -576,16 +578,16 @@ body{
      color: #000;
   }
   #s3{
-     background:linear-gradient(45deg,#F1467A,#FB949E);
+     background:linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
      color: #000;
   }
   #s4{
-     background:linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
-     color: #000;
+     background:linear-gradient(45deg,#F32F8E,#B236D0);
+     color: #fff;
   }
   #s5{
-     background:linear-gradient(45deg,#95FD48,#19E9A6);
-     color: #000;
+     background:linear-gradient(-225deg, #ac32e4 0%, #7918f2 48%, #4801ff 100%);
+     color: #fff;
   }
   /*-----------------------------skill card caoursel END------------------*/
 
