--- a/mobile/contactform/contactformscss.scss
+++ b/mobile/contactform/contactformscss.scss
@@ -7,11 +7,16 @@ $red: #fe5567;
 $white: rgba(245, 245, 245, 1);
 
 @mixin outer-shadow {
-  box-shadow: 5px 5px 8px rgba(185, 185, 185, 1),
+  -webkit-box-shadow: 5px 5px 8px rgba(185, 185, 185, 1),
+             -5px -5px 8px rgba(235, 235, 235, 1);
+          box-shadow: 5px 5px 8px rgba(185, 185, 185, 1),
              -5px -5px 8px rgba(235, 235, 235, 1); }
 @mixin focus-shadow {
-  box-shadow: 5px 5px 8px rgba(165, 165, 165, 0),
+  -webkit-box-shadow: 5px 5px 8px rgba(165, 165, 165, 0),
+             -5px -5px 8px rgba(235, 235, 235, 0),
+              inset 5px 5px 8px rgba(165, 165, 165, 0.8),
+              inset -5px -5px 8px rgba(235, 235, 235, 0.8);
+          box-shadow: 5px 5px 8px rgba(165, 165, 165, 0),
              -5px -5px 8px rgba(235, 235, 235, 0),
               inset 5px 5px 8px rgba(165, 165, 165, 0.8),
               inset -5px -5px 8px rgba(235, 235, 235, 0.8); }
-
