--- a/mobile/navigation/navcss.css
+++ b/mobile/navigation/navcss.css
@@ -1,77 +1,13 @@
-  /*
-  .scroll-down {
-  	position: absolute;
-  	left: 50%;
-  	bottom: 5vh;
-  	display: block;
-  	text-align: center;
-  	font-size: 20px;
-  	z-index: 100;
-  	text-decoration: none;
-  	text-shadow: 0;
-  	width: 13px;
-  	height: 13px;
-  	border-bottom: 2px solid #fff;
-  	border-right: 2px solid #fff;
-  	z-index: 9;
-  	-webkit-transform: translate(-50%, 0%) rotate(45deg);
-  	-moz-transform: translate(-50%, 0%) rotate(45deg);
-  	transform: translate(-50%, 0%) rotate(45deg);
-  	-webkit-animation: fade_move_down 2s ease-in-out infinite;
-  	-moz-animation: fade_move_down 2s ease-in-out infinite;
-  	animation: fade_move_down 2s ease-in-out infinite;
-  }
-
-
-  ----------------animated scroll arrow animation  
-  @-webkit-keyframes fade_move_down {
-   0% {
-  -webkit-transform:translate(0, -10px) rotate(45deg);
-  opacity: 0;
-  }
-   50% {
-  opacity: 1;
-  }
-   100% {
-  -webkit-transform:translate(0, 10px) rotate(45deg);
-  opacity: 0;
-  }
-  }
-  @-moz-keyframes fade_move_down {
-   0% {
-  -moz-transform:translate(0, -10px) rotate(45deg);
-  opacity: 0;
-  }
-   50% {
-  opacity: 1;
-  }
-   100% {
-  -moz-transform:translate(0, 10px) rotate(45deg);
-  opacity: 0;
-  }
-  }
-  @keyframes fade_move_down {
-   0% {
-  transform:translate(0, -10px) rotate(45deg);
-  opacity: 0;
-  }
-   50% {
-  opacity: 1;
-  }
-   100% {
-  transform:translate(0, 10px) rotate(45deg);
-  opacity: 0;
-  }
-  }
-
-  ----------------------------------------------------------------------*/
-
   #navbar {
+    background:-webkit-gradient(linear, right top, left top, from(#434343), to(black));
+    background:-o-linear-gradient(right, #434343 0%, black 100%);
     background:linear-gradient(to left, #434343 0%, black 100%);
     opacity: .9;
     position: fixed;
     width: 100%;
     top:-70px;  
+    -webkit-transition: top 1s;  
+    -o-transition: top 1s;  
     transition: top 1s;
   }
 
@@ -81,7 +17,6 @@
     color: #fff;
     text-align: center;
     margin-right: 55px;
-  
     text-decoration: none;
     font-size: 1.2rem;
     border: 2px solid #f00;
@@ -116,6 +51,8 @@
   }
 
   .navbar-custom{
+   background:-webkit-gradient(linear, right top, left top, from(#434343), to(black));
+   background:-o-linear-gradient(right, #434343 0%, black 100%);
    background:linear-gradient(to left, #434343 0%, black 100%);
    opacity: .9;
    border-radius: 4rem;
@@ -173,7 +110,6 @@
     visibility: hidden;
   } 
 }
-
 
 
 
