--- a/mobile/phstyle.css
+++ b/mobile/phstyle.css
@@ -6,6 +6,7 @@
       color: #9c9ea5;
       position: relative;
       display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
       line-height: 2em;
       left: calc((100vw - 552px)/ 24*3 + 72px);
@@ -28,7 +29,8 @@
 
     @media (max-width:767px) {
       .i-subtext {
-        flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
       }
     }
 
@@ -84,7 +86,8 @@
       position: absolute;
       width: calc((100vw - 552px)/ 24*8 + 192px);
       -webkit-transform: translate(-55%, -45%);
-      transform: translate(-55%, -45%);
+      -ms-transform: translate(-55%, -45%);
+          transform: translate(-55%, -45%);
       left: 28%;
       opacity: .34;
 
@@ -153,6 +156,7 @@
       font-style: normal;
       color: #9c9ea5;
       display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
       line-height: 2em;
       left: calc((100vw - 552px)/ 24*3 + 72px);
@@ -177,7 +181,8 @@
 
 @media (max-width:767px) {
       .i-subtext {
-            flex-wrap: wrap;
+            -ms-flex-wrap: wrap;
+                flex-wrap: wrap;
             margin-top:-8vh;
 
       }
@@ -219,6 +224,4 @@ margin-top: -22%;
       text-transform: uppercase;
       padding-top: 1rem;
   }
-
-
 }
