--- a/mobile/style.css
+++ b/mobile/style.css
@@ -1,42 +1,42 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300");
 
 .navbar-custom{
-  background: transparent;
+	background: transparent;
 }
 .button-col{
-  color: white;
+	color: white;
 } 
 .nav-link{
-  color: #fff;
-  }
+	color: #fff;
+}
 
 
 .feedback {
-  background-color : transperent;
-  color: #fff;
-  padding: 10px 0;
-  font-size: 1.2rem;
-  font-weight: 600;
-  
+	background-color : transperent;
+	color: #fff;
+	padding: 10px 0;
+	font-size: 1.2rem;
+	font-weight: 600;
+	
 }
 .logo{
-  width: 4rem;
+	width: 4rem;
 }
 
 #my1  {
-  position: fixed;
-  bottom: 0px;
-  left: 72% ;
+	position: fixed;
+	bottom: 0px;
+	left: 72% ;
 }
 #my3  {
-  position: fixed;
-  bottom: 0px;
-  left: 32%;
+	position: fixed;
+	bottom: 0px;
+	left: 32%;
 }
 #my2  {
-  position: fixed;
-  bottom: 0px;
-  left: 54%;
+	position: fixed;
+	bottom: 0px;
+	left: 54%;
 }
 
 
@@ -59,20 +59,17 @@ body {
 
 header {
 	display: -webkit-box;
-	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: center;
-	-webkit-justify-content: center;
 	-ms-flex-pack: center;
 	justify-content: center;
- width: 100%%;
+	width: 100%%;
 	height: 100vh;
 	background: #e55d87;
-	background: -moz-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
-	background: -webkit-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
+	background: -o-linear-gradient(315deg, #e55d87 0%, #5fc3e4 100%);
 	background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%);
- filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e55d87', endColorstr='#5fc3e4', GradientType=1 );
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e55d87', endColorstr='#5fc3e4', GradientType=1 );
 }
 
 
@@ -86,6 +83,8 @@ header {
 	background: none;
 	overflow: hidden;
 	-webkit-transition: all 0.3s;
+	-webkit-transition: all 2s;
+	-o-transition: all 2s;
 	transition: all 2s;
 	opacity: 0;
 	top: -100px;
@@ -93,9 +92,9 @@ header {
 }
 
 @media only screen and (max-width: 766px) {
-.main_nav {
-	padding-top: 25px;
-}
+	.main_nav {
+		padding-top: 25px;
+	}
 }
 .open-nav {
 	max-height: 400px !important;
@@ -104,23 +103,23 @@ header {
 	background-color: #f00;
 	opacity: 1;
 	top: 0px;
-  visibility:none;
+	visibility:none;
 }
 @media only screen and (max-width: 766px){
-  .sticky{
-    display:none;
-  }
-  .mobie-toggle{
-    visibility:visible;
-  }
+	.sticky{
+		display:none;
+	}
+	.mobie-toggle{
+		visibility:visible;
+	}
 }
 @media only screen and (min-width: 766px){
-  .sticky{
-    display:block;
-  }
-  .mobie-toggle{
-    display:none;
-  }
+	.sticky{
+		display:block;
+	}
+	.mobie-toggle{
+		display:none;
+	}
 }
 
 nav {
@@ -129,9 +128,9 @@ nav {
 }
 
 @media only screen and (max-width: 766px) {
-nav {
-	width: 100%;
-}
+	nav {
+		width: 100%;
+	}
 }
 nav ul {
 	list-style: none;
@@ -140,12 +139,12 @@ nav ul {
 }
 
 @media only screen and (max-width: 766px) {
-nav ul {
-	padding-top: 0px;
-	margin-bottom: 22px;
-	text-align: center;
-	width: 100%;
-}
+	nav ul {
+		padding-top: 0px;
+		margin-bottom: 22px;
+		text-align: center;
+		width: 100%;
+	}
 }
 nav ul li {
 	display: inline-block;
@@ -155,14 +154,14 @@ nav ul li {
 }
 
 @media only screen and (max-width: 766px) {
-nav ul li {
-	width: 100%;
-	padding: 7px 0;
-	margin: 0;
-}
-nav ul li:first-child {
-	margin-top: 70px;
-}
+	nav ul li {
+		width: 100%;
+		padding: 7px 0;
+		margin: 0;
+	}
+	nav ul li:first-child {
+		margin-top: 70px;
+	}
 }
 nav ul a {
 	text-transform: uppercase;
@@ -173,10 +172,10 @@ nav ul a:hover {
 	color: #CFCFCF;
 }
 @media only screen and (max-width: 766px) {
-.mobile-toggle {
-	display: block;
-  visibility:hidden;
-}
+	.mobile-toggle {
+		display: block;
+		visibility:hidden;
+	}
 }
 .scroll-down {
 	position: absolute;
@@ -194,51 +193,39 @@ nav ul a:hover {
 	border-right: 2px solid #fff;
 	z-index: 9;
 	-webkit-transform: translate(-50%, 0%) rotate(45deg);
-	-moz-transform: translate(-50%, 0%) rotate(45deg);
+	-ms-transform: translate(-50%, 0%) rotate(45deg);
 	transform: translate(-50%, 0%) rotate(45deg);
 	-webkit-animation: fade_move_down 2s ease-in-out infinite;
-	-moz-animation: fade_move_down 2s ease-in-out infinite;
 	animation: fade_move_down 2s ease-in-out infinite;
 }
 
 
 /*animated scroll arrow animation*/
 @-webkit-keyframes fade_move_down {
- 0% {
--webkit-transform:translate(0, -10px) rotate(45deg);
-opacity: 0;
-}
- 50% {
-opacity: 1;
-}
- 100% {
--webkit-transform:translate(0, 10px) rotate(45deg);
-opacity: 0;
-}
-}
-@-moz-keyframes fade_move_down {
- 0% {
--moz-transform:translate(0, -10px) rotate(45deg);
-opacity: 0;
-}
- 50% {
-opacity: 1;
-}
- 100% {
--moz-transform:translate(0, 10px) rotate(45deg);
-opacity: 0;
-}
+	0% {
+		-webkit-transform:translate(0, -10px) rotate(45deg);
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+	}
+	100% {
+		-webkit-transform:translate(0, 10px) rotate(45deg);
+		opacity: 0;
+	}
 }
 @keyframes fade_move_down {
- 0% {
-transform:translate(0, -10px) rotate(45deg);
-opacity: 0;
-}
- 50% {
-opacity: 1;
-}
- 100% {
-transform:translate(0, 10px) rotate(45deg);
-opacity: 0;
-}
+	0% {
+		-webkit-transform:translate(0, -10px) rotate(45deg);
+		transform:translate(0, -10px) rotate(45deg);
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+	}
+	100% {
+		-webkit-transform:translate(0, 10px) rotate(45deg);
+		transform:translate(0, 10px) rotate(45deg);
+		opacity: 0;
+	}
 }
